# mcp-server

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: mcp.py  postman.py  test.py  test_dashboard.py
app/core/: mcp_handler.py  mcp_protocol.py  postman_handler.py  test_handler.py
app/db/: base.py  base_class.py  init_db.py
app/models/: __init__.py  api.py  collection.py  postman.py  test.py  test_run.py  user.py
app/schemas/: api.py  collection.py  test.py  user.py
app/services/: postman_parser.py
app/templates/: test_dashboard.html
scripts/: check_db.py  clean_db.py  generate_ssl.py  init_test_data.py
